tests/outref/TSCP03_errors.ref

-- Test that boolean literals cannot be used in string operations i.e. below should error out
select true || false;

-- TODO: Below should error out (#559)
select id,(id = 2)::numeric from names;
select id,(id = 2)::date from names;
select id,(id = 2)::time from names;

-- Test binary operations (arithmetic, string concatenation) between boolean and non-boolean types ERRORs out
select id+(id=2) from names;
select id-(id=2) from names;
select id*(id=2) from names;
select id/(id=2) from names;
select id%(id=2) from names;

-- Test that boolean operations on non-boolean types issue errors
select id from names where (id OR id);
select id from names where (id AND id);
select id from names where (NOT id);
select firstname from names where (firstname OR firstname);
select firstname from names where (firstname AND firstname);
select firstname from names where (NOT firstname);

-- Boolean operations should issue error if one operand is not boolean type
select n2.id and EXISTS (select * from names n1) from names n2;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for || operator
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select true || false;
ID|ID
0|0
1|0
2|1
3|0
4|0
5|0
(6 rows)
ID|ID
0|false
1|false
2|true
3|false
4|false
5|false
(6 rows)
ID|ID
0|false
1|false
2|true
3|false
4|false
5|false
(6 rows)
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for arithmetic operations
Error with syntax near (line 1, column 12):

select id+(id=2) from names;
           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id+(id=2) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for arithmetic operations
Error with syntax near (line 1, column 12):

select id-(id=2) from names;
           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id-(id=2) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for arithmetic operations
Error with syntax near (line 1, column 12):

select id*(id=2) from names;
           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id*(id=2) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for arithmetic operations
Error with syntax near (line 1, column 12):

select id/(id=2) from names;
           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id/(id=2) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type BOOLEAN not compatible for arithmetic operations
Error with syntax near (line 1, column 12):

select id%(id=2) from names;
           ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id%(id=2) from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
Error with syntax near (line 1, column 29):

select id from names where (id OR id);
                            ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
Error with syntax near (line 1, column 35):

select id from names where (id OR id);
                                  ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id from names where (id OR id);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
Error with syntax near (line 1, column 29):

select id from names where (id AND id);
                            ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
Error with syntax near (line 1, column 36):

select id from names where (id AND id);
                                   ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id from names where (id AND id);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select id from names where (NOT id);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for boolean operations
Error with syntax near (line 1, column 36):

select firstname from names where (firstname OR firstname);
                                   ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for boolean operations
Error with syntax near (line 1, column 49):

select firstname from names where (firstname OR firstname);
                                                ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names where (firstname OR firstname);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for boolean operations
Error with syntax near (line 1, column 36):

select firstname from names where (firstname AND firstname);
                                   ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for boolean operations
Error with syntax near (line 1, column 50):

select firstname from names where (firstname AND firstname);
                                                 ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names where (firstname AND firstname);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type VARCHAR not compatible for boolean operations
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select firstname from names where (NOT firstname);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type INTEGER not compatible for boolean operations
Error with syntax near (line 1, column 8):

select n2.id and EXISTS (select * from names n1) from names n2;
       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select n2.id and EXISTS (select * from names n1) from names n2;

